# Auto-Deploy

./: .env.example  .gitignore  DEPLOY_AGENT_README.md  FIXES_README.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MODULARIZATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  VERCEL_AUTH_README.md  app.py  config.py  demo_deploy.py  deploy.sh  deploy_agent.py  main.py  pyproject.toml  requirements.txt  setup.py  test_dependencies.py  test_deploy_agent.py  test_node_fix.py  test_subprocess.py  troubleshoot_node.py  vercel_auth.py
api/: index.py
auto_deploy_agent_cli/: __init__.py  deploy_agent.py
auto_deploy_agent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
core/: builder.py  cli_manager.py  deployer.py  detector.py  file_manager.py  git_handler.py  model_selector.py  recommender.py
deploy-agent-cli/: deploy.bat  deploy_agent.py  setup.py
deploy-agent-cli/examples/flask-example/: README.md  app.py
deploy-agent-cli/examples/flask-example/api/: index.py
deploy-agent-cli/examples/static-example/: README.md  deploy.bat
deploy-ready-agent/: README.md  deploy.bat  deploy.sh  deploy_agent.py  requirements.txt
deploy-ready-agent/examples/static-example/: index.html
flask-test-project/: README.md  app.py
react-test-project/: package.json
test-project/: DEPLOY_INSTRUCTIONS.md  README.md  TROUBLESHOOTING.md  deploy.bat  deploy.ps1  deploy.sh  index.html  package.json
utils/: helpers.py
vite-test-project/: README.md  package-lock.json  package.json
